logger + dev runtime restart on changes

--- a/apps/storage/.dev.env
+++ b/apps/storage/.dev.env
@@ -4,4 +4,6 @@ API_TOKEN=0000-0000-0000-0000-0000
 
 DATABASE_URL=postgresql://dev:secret@localhost:5432/storage
 
+LOG_FILE_PATH=./storage.log
+
 PORT=7080
