--- a/apps/storage/package.json
+++ b/apps/storage/package.json
@@ -9,13 +9,18 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "start": "node build/main/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "LarsFin",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.27.0",
+    "@jest/globals": "^29.7.0",
     "@tsconfig/recommended": "^1.0.8",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/jest-when": "^3.5.5",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "eslint": "^9.22.0",
@@ -23,7 +28,10 @@
     "eslint-import-resolver-typescript": "^3.8.7",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
+    "jest": "^29.7.0",
+    "jest-when": "^3.7.0",
     "prettier": "^3.5.3",
+    "ts-jest": "^29.3.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   },
