--- a/apps/storage/package.json
+++ b/apps/storage/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "start": "node build/index.js",
-    "test": "jest"
+    "test": "npm run test:unit && npm run test:integration",
+    "test:integration": "node scripts/run-integration-tests.js",
+    "test:unit": "jest --config jest.config.unit.js"
   },
   "author": "LarsFin",
   "license": "ISC",
@@ -21,8 +23,11 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jest-when": "^3.5.5",
+    "@types/pg": "^8.11.11",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
+    "cross-env": "^7.0.3",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-import-resolver-typescript": "^3.8.7",
@@ -30,10 +35,13 @@
     "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
     "jest-when": "^3.7.0",
+    "pg": "^8.14.1",
     "prettier": "^3.5.3",
+    "supertest": "^7.1.0",
     "ts-jest": "^29.3.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "uuid": "^11.1.0"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
