--- a/apps/storage/package.json
+++ b/apps/storage/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
     "dev": "ts-node-dev --respawn --transpile-only src/main/index.ts",
+    "dev:generate": "prisma generate",
     "dev:migrate": "prisma migrate dev",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
